# vkal

./: .emacs  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_Original.txt  Command Prompt.lnk  LICENSE  README.md  TODO.md  build.bat  msvc.bat  vkal.c  vkal.h  vma_usage.cpp  vma_usage.h
assets/shaders/: compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
src/: main.c  main.c~  platform.c  platform.c~  platform.h  platform.h~  vkal.c  vkal.c~  vkal.h  vkal.h~  vkal_config.h  vkal_config.h~
src/examples/: .#primitives.c  CMakeLists.txt  CMakeLists_original.txt  hello_triangle.cpp  hello_triangle_sdl.cpp  mesh_skinning.c  mesh_skinning_glm.cpp  model_loading.c  model_loading_md.c  primitives.c  primitives_dynamic.c  q2_common.c  q2_common.h  q2_e_parser.h  q2_io.c  q2_io.h  q2_r_local.c  q2_r_local.h  q2_vk_render.c  q2_vk_render.h  q2bsp.c  quake2_level.c  rendertexture.c  texture.c  texture_win32.c  textures.c  textures.c~  textures_descriptorarray.c  textures_descriptorarray_push_constant.c  textures_descriptorarray_push_constant.c~  textures_dynamic_descriptor.c  ttf_drawing.c
src/examples/GLFW_DynamicDescriptor/: CMakeLists.txt  textures_dynamic_descriptor.c  textures_dynamic_descriptor.cpp
src/examples/GLFW_DynamicDescriptorTransformUniform/: CMakeLists.txt  model_loading.c  model_loading.cpp
src/examples/GLFW_HelloTriangle/: CMakeLists.txt  hello_triangle.cpp
src/examples/GLFW_ImGUI/: CMakeLists.txt  hello_imgui.cpp  hello_triangle.cpp
src/examples/GLFW_MultipleTexturesNaive/: CMakeLists.txt  textures.c  textures.cpp
src/examples/GLFW_Primitives/: CMakeLists.txt  primitives.c  primitives.cpp
src/examples/GLFW_PrimitivesDynamic/: CMakeLists.txt  primitives_dynamic.c  primitives_dynamic.cpp
src/examples/GLFW_Raytracing/: CMakeLists.txt  raytracing.cpp
src/examples/GLFW_RenderToTexture/: CMakeLists.txt  rendertexture.c  rendertexture.cpp
src/examples/GLFW_Texture/: CMakeLists.txt  texture.c  texture.cpp
src/examples/GLFW_TextureDescriptorArray/: CMakeLists.txt  textures_descriptorarray_push_constant.c  textures_descriptorarray_push_constant.cpp
src/examples/GLFW_TrueType/: CMakeLists.txt  ttf_drawing.c  ttf_drawing.cpp
src/examples/HelloTriangle_GLFW/: CMakeLists.txt  hello_triangle.cpp
src/examples/SDL_HelloTriangle/: CMakeLists.txt  hello_triangle_sdl.cpp
src/examples/SDL_Instancing/: CMakeLists.txt  README.md  instancing_sdl.cpp
src/examples/WIN32_Texture/: CMakeLists.txt  texture_win32.c  texture_win32.cpp
src/examples/assets/fonts/: ProggyCleanLicense.txt
src/examples/assets/maps/: base1.bsp  generic.bsp  michi2.bsp  michi3.bsp  michi4.bsp  michi5.bsp
src/examples/assets/models/: modeldata.md  modeldata_lego.md
src/examples/assets/shaders/: closesthit.rchit  closesthit.spv  compile.bat  hello_triangle.vert  hello_triangle_frag.spv  hello_triangle_vert.spv  instancing.frag  instancing.vert  instancing_frag.spv  instancing_vert.spv  lightmiss.rmiss  lightmiss.spv  miss.rmiss  model_loading.frag  model_loading.vert  model_loading_frag.spv  model_loading_md.frag  model_loading_md.vert  model_loading_md_frag.spv  model_loading_md_vert.spv  model_loading_vert.spv  primitives.frag  primitives.vert  primitives_frag.spv  primitives_textured_rect.frag  primitives_textured_rect.vert  primitives_textured_rect_frag.spv  primitives_textured_rect_vert.spv  primitives_vert.spv  q2bsp.frag  q2bsp.vert  q2bsp_frag.spv  q2bsp_sky.frag  q2bsp_sky.vert  q2bsp_sky_frag.spv  q2bsp_sky_vert.spv  q2bsp_trans.frag  q2bsp_trans.vert  q2bsp_trans_frag.spv  q2bsp_trans_vert.spv  (+28 more)
src/examples/legacy/: README.md  mesh_skinning.c  mesh_skinning_glm.cpp
src/examples/q2bsp/: q2_common.h  q2_e_parser.c  q2_e_parser.h  q2_io.c  q2_io.h  q2_r_local.c  q2_r_local.h  q2_vk_render.c  q2_vk_render.h  q2bsp.c  q2bsp.h  quake2_level.c
src/examples/utils/: .#tr_math.h  camera.cpp  camera.h  common.h  glslcompile.c  glslcompile.cpp  glslcompile.h  model.c  model.cpp  model.h  model_v2.cpp  model_v2.h  platform.c  platform.cpp  platform.h  q2bsp.c  q2bsp.h  tr_math.c  tr_math.h
src/vkal/: CMakeLists.txt  vkal.c  vkal.h
src/vkal/macOS/Debug/MoltenVK/dylib/macOS/libMoltenVK.dylib.dSYM/Contents/: Info.plist
src/vkal/macOS/Debug/MoltenVKShaderConverter/MoltenVKShaderConverter.xcframework/: Info.plist
