cmake_minimum_required(VERSION 3.10)
project(Examples VERSION 1.0)

if (${WINDOWING} STREQUAL "VKAL_GLFW")
    add_subdirectory(GLFW_HelloTriangle)
    add_subdirectory(GLFW_Primitives)
    add_subdirectory(GLFW_PrimitivesDynamic)
    add_subdirectory(GLFW_TrueType)
    add_subdirectory(GLFW_Texture)
    add_subdirectory(GLFW_DynamicDescriptor)
    add_subdirectory(GLFW_DynamicDescriptorTransformUniform)
    add_subdirectory(GLFW_RenderToTexture)
    add_subdirectory(GLFW_TextureDescriptorArray)
    add_subdirectory(GLFW_MultipleTexturesNaive)
    add_subdirectory(GLFW_ImGUI)
elseif(${WINDOWING} STREQUAL "VKAL_SDL")
    add_subdirectory(SDL_HelloTriangle)
elseif(${WINDOWING} STREQUAL "VKAL_WIN32")
    add_subdirectory(WIN32_Texture)
endif()


